[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Door/keyYellow.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Key.gd" type="Script" id=2]
[ext_resource path="res://Assets/sounds/confirmation_002.ogg" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 27, 17 )

[node name="Key" type="Area2D"]
collision_layer = 0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="SoundKey" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -15.0
bus = "Effects"

[connection signal="body_entered" from="." to="." method="_on_Key_body_entered"]
[connection signal="finished" from="SoundKey" to="." method="_on_SoundKey_finished"]
